# pytterns

./: README.md  pyproject.toml
.github/workflows/: test.yml
pytterns/: __init__.py  patterns.py
pytterns/core/: decorators.py  loaders.py
tests/: test_decorators.py  test_integration.py  test_loaders.py  test_patterns.py
