[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytterns"
version = "0.1.0"
description = "A library to easily use design patterns with Python"
authors = [{name = "Marcos Rosa", email = "marcos.cantor@gmail.com"}]
license = {text = "MIT"}
dependencies = []

[tool.setuptools]
packages = ["pytterns", "pytterns.core"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
